Fix table menu z-index issue

--- a/src/components/configuration-collection/configuration-collection.css
+++ b/src/components/configuration-collection/configuration-collection.css
@@ -17,5 +17,5 @@
 }
 
 .mdl-data-table .pretransform.transform {
-    transform: translateX(0);
+    transform: initial;
 }
